--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,9 @@
     { "src": "frontend/package.json", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "api/index.py" },
+    { "src": "/api/(.*)", "dest": "/api/index.py" },
     { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "frontend/dist/$1" },
-    { "src": "/.*", "dest": "frontend/dist/index.html" }
+    { "src": "/(.*)", "dest": "/frontend/dist/$1" },
+    { "src": "/.*", "dest": "/frontend/dist/index.html" }
   ]
 }
