--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "builds": [
     { "src": "backend/main.py", "use": "@vercel/python" },
-    { "src": "frontend/vite.config.js", "use": "@vercel/static-build", "config": { "distDir": "frontend/dist" } }
+    { "src": "frontend/package.json", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/backend/main.py" },
