--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,8 @@
 # Add your API keys here
 # GOOGLE_API_KEY=your_google_gemini_api_key_here
+
+# Alpaca Markets API (Paper Trading)
+# Get your keys from: https://app.alpaca.markets/paper/dashboard/overview
+ALPACA_API_KEY=your_alpaca_api_key_here
+ALPACA_API_SECRET=your_alpaca_api_secret_here
+ALPACA_DATA_URL=https://data.alpaca.markets
