--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,9 +9,11 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Proxy API requests to backend (host.docker.internal for host network)
+    # Proxy API requests to backend
     location /api/ {
-        proxy_pass http://options-backend:8000/api/;
+        # Using service name directly is more reliable for URI mapping
+        proxy_pass http://backend:8000;
+        
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
