--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,7 +6,10 @@ services:
     image: ghcr.io/nolancassidy/day-trading-options-tool/backend:latest
     container_name: options-backend
     restart: always
-    network_mode: host
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./backend/data:/app/data
     environment:
       - PYTHONUNBUFFERED=1
     env_file:
@@ -19,6 +22,8 @@ services:
     restart: always
     ports:
       - "8420:80"
+    volumes:
+      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
 
   watchtower:
     image: containrrr/watchtower
