--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -11,7 +11,7 @@ server {
 
     # Proxy API requests to backend (host.docker.internal for host network)
     location /api/ {
-        proxy_pass http://host.docker.internal:8000/api/;
+        proxy_pass http://options-backend:8000/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
